--- a/app/components/AnimatedButton/AnimatedButton.module.scss
+++ b/app/components/AnimatedButton/AnimatedButton.module.scss
@@ -51,7 +51,7 @@ $light: #7cf5ff;
 // Primary Button
 .primary {
   background: $primary;
-  color: white;
+  color: rgb(249, 0, 0);
   box-shadow: 0 10px 30px rgba($primary, 0.3);
 
   .glow {
